feat: Add Default view component to SelectedStock

--- a/StocksApp/Views/Shared/_Layout.cshtml
+++ b/StocksApp/Views/Shared/_Layout.cshtml
@@ -19,6 +19,9 @@
                 <li class="nav-item">
                     <a asp-controller="Trade" asp-action="Orders" class="nav-link">Orders</a>
                 </li>
+                <li class="nav-item">
+                    <a asp-controller="Stocks" asp-action="Explore" class="nav-link">Explore</a>
+                </li>
             </ul>
         </div>
     </nav>
